<resources>
    <string name="app_name">OLFFI</string>
    <string name="facebook_app_id">914173908638832</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm your password</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">Please enter a correct name</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirmation">The two passwords have to be the same</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="button_log_in">Log in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_log_in_fb">Log in with Facebook</string>
    <string name="button_log_in_li">Log in with LinkedIn</string>
    <string name="action_search">Search for a country, fund, program…</string>
    <string name="button_search">Search</string>
    <string name="button_country_regulations">Country</string>
    <string name="button_coproduction_treaties">Coproduction</string>
    <string name="button_calendar">Calendar</string>
    <string name="button_publications">Publication</string>
    <string name="button_compare">Compare</string>
    <string name="tag_line">Find funding for your project!</string>
    <string name="web_view_error">Olffi can\'t connect to the network</string>
    <string name="hint_search_country">Search for a country</string>
    <string name="title_calendar">Funding Calendar</string>
    <string name="title_publication">Publications</string>
    <string name="title_compare">Compare Programs</string>
    <string name="title_settings">Settings</string>
    <string name="list_empty_no_result">"No result found for \'%1$s\'"</string>
    <string name="list_empty_searching_for">Searching for \'%1$s\'</string>
</resources>
