<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_half"
    tools:context="com.olffi.app.olffi.LoginActivity">

    <ImageView android:id="@+id/logo"
        android:layout_height="@dimen/logo_height_medium"
        android:layout_width="wrap_content"
        android:src="@drawable/olffi_logo_simple"
        android:layout_margin="@dimen/margin_double"
        />

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="@dimen/progressBar"
        android:layout_height="@dimen/progressBar"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/email_login_form"
            style="@style/MW.Vertical">
            <LinearLayout style="@style/MW" android:id="@+id/signUpName" android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    style="@style/MW"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_half"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/firstName"
                        style="@style/EdiTextLogin"
                        android:hint="@string/prompt_first_name"
                        android:nextFocusForward="@+id/lastName"
                        android:imeOptions="actionNext"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/MW"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_half"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/lastName"
                        style="@style/EdiTextLogin"
                        android:hint="@string/prompt_last_name"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/MW"
                android:layout_margin="@dimen/margin_half"
                app:hintEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    style="@style/EdiTextLogin"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/password"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/MW"
                android:layout_margin="@dimen/margin_half"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/password"
                    style="@style/EdiTextLogin"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:id="@+id/signUpConfirm"
                android:visibility="gone"
                style="@style/MW"
                android:layout_margin="@dimen/margin_half"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/passwordConfirm"
                    style="@style/EdiTextLogin"
                    android:hint="@string/prompt_password_confirm"
                    android:imeActionId="@+id/sign_up"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_half"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
